# prosody

./: .env.example  .gitignore  AGENTS.md  READE.md  README.md  justfile
.eas/workflows/: create-production-builds.yml
.github/workflows/: ci.yml  mobile-artifacts.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
backend/: .dockerignore  Dockerfile  alembic.ini  fly.toml  pyproject.toml  requirements.txt
backend/app/: main.py  models.py  worker.py
backend/app/analyzers/: azure.py  base.py  factory.py  free.py  google.py  openai.py
backend/app/api/: analyze.py  progress.py
backend/app/content/: __init__.py
backend/app/content/curriculum/: day-01.json  day-02.json  day-03.json  day-04.json  day-05.json  day-06.json  day-07.json  day-08.json  day-09.json  day-10.json  day-11.json  day-12.json  day-13.json  day-14.json
backend/app/content/phrases/: meetings.json
backend/app/content/schema/: curriculum.json  day.json  exercise.json  meetingphrase.json  models.py
backend/migrations/: env.py
backend/migrations/versions/: 39a907f5b8ea_create_users_and_session_results.py
backend/tests/: conftest.py  test_analyze_api.py  test_analyzers.py  test_byop_analyzers.py  test_progress.py  test_worker.py
docs/: content-and-audio-workflow.md  database-migrations.md
mobile/: App.tsx  app.config.ts  app.json  eas.json  metro.config.js  package-lock.json  package.json
mobile/.eas/workflows/: create-production-builds.yml
mobile/assets/curriculum/: day-01.json  day-02.json  day-03.json  day-04.json  day-05.json  day-06.json  (+9 more)
mobile/components/: AudioPlayer.tsx  AudioRecorder.tsx  FeedbackCard.tsx  Logo.tsx  TabBarIcon.tsx
mobile/config/: api.ts  byop.ts
mobile/navigation/: TabNavigator.tsx
mobile/screens/: ChunkSpeakingScreen.tsx  DashboardScreen.tsx  ExerciseScreen.tsx  HomeScreen.tsx  IntonationTrainingScreen.tsx  LibraryScreen.tsx  LinkingPracticeScreen.tsx  OnboardingScreen.tsx  ProgramOverviewScreen.tsx  SessionCompletionScreen.tsx  SettingsScreen.tsx  ShadowingModeScreen.tsx  StressDrillScreen.tsx
mobile/types/: analysis.ts  svg.d.ts
scripts/: generate_schema.py
scripts/ralph/: .last-branch  prd.json  progress.txt  ralph.sh
(+1 files in other folders)
