[project]
name = "english-rhythm-coach-backend"
version = "0.1.0"
description = "Backend API for English Rhythm Coach"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydub",
    "python-multipart",
    "pydantic",
    "librosa",
    "praat-parselmouth",
    "numpy",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "httpx",
]

[tool.uv]
package = false
