[project]
name = "english-rhythm-coach-backend"
version = "0.1.0"
description = "Backend API for English Rhythm Coach"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.131.0",
    "uvicorn[standard]==0.41.0",
    "sqlalchemy==2.0.46",
    "pydub==0.25.1",
    "python-multipart==0.0.22",
    "pydantic==2.12.5",
    "librosa==0.11.0",
    "praat-parselmouth==0.4.7",
    "numpy==2.2.6",
    "azure-cognitiveservices-speech==1.48.2",
    "google-cloud-speech==2.36.1",
    "openai==2.22.0",
    "PyJWT==2.8.0",
    "protobuf>=5.0",
    "alembic>=1.18.4",
]

[project.optional-dependencies]
azure = ["azure-cognitiveservices-speech==1.48.2"]
google = ["google-cloud-speech==2.36.1"]
openai = ["openai==2.22.0"]
all = [
    "azure-cognitiveservices-speech==1.48.2",
    "google-cloud-speech==2.36.1",
    "openai==2.22.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "ruff==0.15.2",
    "httpx==0.28.1",
]

[tool.uv]
package = false
